@@ -17,6 +17,14 @@
 
 #ifndef _XOPEN_SOURCE
 #define _XOPEN_SOURCE 600
+
+// broken BSD; XOPEN should not imply _POSIX_C_SOURCE,
+//  _POSIX_C_SOURCE should not stop __BSD_VISIBLE
+
+#define u_int unsigned int
+#define u_short unsigned short
+#define u_long unsigned long
+#define u_char unsigned char
 #endif
 
 #include "../config.h"
@@ -67,6 +75,15 @@
 
 #ifdef  HAVE_SYS_EVENT_H
 #include <sys/event.h>
+#endif
+
+// more broken BSD with XOPEN in headers...
+#ifdef  HAVE_LSTAT
+
+extern "C" {
+    int lstat(const char *path, struct stat *ino);
+}
+
 #endif
 
 using namespace UCOMMON_NAMESPACE;
